--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 80%;
+}
+
+nav {
+  li {
+    display: inline-block;
+    padding-right: 1rem;
+
+
+    &:last-of-type {
+      padding-right: 0;
+    }
+  }
+}
